--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,9 @@
+{lib_dirs, ["../../erlyvideo/apps"]}.
 {port_sources, ["c_src/uvc4erl.c"]}.
 {so_specs, [
   {"priv/uvc4erl_drv.so", ["c_src/uvc4erl.o"]}
 ]}.
-%{port_envs, [
-%  {"(linux|freebsd)", "LDFLAGS", "$LDFLAGS -lcrypt"}
-%]}.
+{port_envs, [
+  {"(linux|freebsd)", "LDFLAGS", "$LDFLAGS -lswscale"}
+]}.
 {pre_hooks, [{compile, "rm -f src/._*.erl"}]}.
