--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {lib_dirs, ["../../erlyvideo/apps"]}.
-{port_sources, ["c_src/uvc4erl.c"]}.
+{port_sources, ["c_src/uvc.c"]}.
 {so_specs, [
-  {"priv/uvc4erl_drv.so", ["c_src/uvc4erl.o"]}
+  {"priv/uvc_drv.so", ["c_src/uvc.o"]}
 ]}.
 {port_envs, [
   {"(linux|freebsd)", "LDFLAGS", "$LDFLAGS -lswscale"}
