--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{lib_dirs, ["../../erlyvideo/apps"]}.
+{lib_dirs, ["../../erlyvideo/apps", "../../erlyvideo/lib"]}.
 {port_sources, ["c_src/uvc.c"]}.
 {so_specs, [
   {"priv/uvc_drv.so", ["c_src/uvc.o"]}
