better debug fixes

--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,10 @@
-{lib_dirs, ["../../erlyvideo/apps", "../../erlyvideo/lib"]}.
-{port_sources, ["c_src/uvc.c"]}.
-{so_specs, [
-  {"priv/uvc_drv.so", ["c_src/uvc.o"]}
+%{lib_dirs, ["../../erlyvideo/apps", "../../erlyvideo/lib"]}.
+{port_specs, [
+  {"priv/uvc_drv.so", ["c_src/uvc.c"]}
 ]}.
-{port_envs, [
-  {"(linux|freebsd)", "LDFLAGS", "$LDFLAGS -lswscale"}
+{port_env, [
+  {"LDFLAGS", "$LDFLAGS -lswscale"}
 ]}.
 {pre_hooks, [{compile, "rm -f src/._*.erl"}]}.
+{erl_opts, [debug_info, {i, "apps"}, {parse_transform, lager_transform}, warnings_as_errors]}.
+
